// Vitest Snapshot v1

exports[`Textarea > renders without crashing 1`] = `
<div>
  <div
    class="lunatic-textarea"
  >
    <textarea
      aria-invalid="false"
      id="input"
    >
      input
    </textarea>
  </div>
</div>
`;

exports[`Textarea > should handle readOnly 1`] = `
<div>
  <div
    class="lunatic-textarea"
  >
    <textarea
      aria-invalid="false"
      id="textarea"
      readonly=""
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </textarea>
  </div>
</div>
`;
